
	1.0
	- Working code

	1.1
	- Reorganize for single directory of output

	1.2
	- Progress meter

	1.3
	- Code refactoring
	
	1.4
	- Bool enumeration
	- Optional read_only and write_only
	- Optional looping

	1.5
	- Discovered where the rogue ASSERT was, though not why.
	- Retrenched to only using FAIL and ASSERT and removed 
	  problematic error handling code
	- Documented, but did not implement, details of system
	  call return codes
	- Timer intialization check

	1.6
	- Introduce "profiles" option, and don't do profiles unless it is
	  set
	- Adjust defaults for operation without parameters file
	- Reduce verbosity for default operation, summary line only
	